1. refactoring List.of.. Set.of Улучшения[#197339]