@@ -6,7 +6,7 @@ import java.util.List;
 
 public class CollectionsRotateDemo {
     public static void main(String[] args) {
-        List<String> list = Arrays.asList("a", "b", "c", "d", "e");
+        List<String> list = List.of("a", "b", "c", "d", "e");
         System.out.println(list);
 
         Collections.rotate(list, 2);
@@ -16,11 +16,11 @@ public class CollectionsRotateDemo {
         System.out.println(list);
 
 
-        List<String> listFill = Arrays.asList("красный", "синий", "зеленый");
+        List<String> listFill = List.of("красный", "синий", "зеленый");
         Collections.fill(listFill, "черный");
         System.out.println(listFill);
         //Try shuffle collection
-        List<String> listShfl = Arrays.asList("красный", "синий", "зеленый", "черный");
+        List<String> listShfl = List.of("красный", "синий", "зеленый", "черный");
         System.out.println("Перед reversing: " + listShfl);
         Collections.reverse(listShfl);
         System.out.println("После reversing: " + listShfl);
