@@ -1,6 +1,5 @@
 package ru.job4j.collection;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -12,7 +11,7 @@ public class UserDescByAge implements Comparator<User> {
     }
 
     public static void main(String[] args) {
-        List<User> lst = Arrays.asList(new User("a", 3),
+        List<User> lst = List.of(new User("a", 3),
                 new User("aa", 1),
                 new User("aaa", 11)
         );
