@@ -1,16 +1,16 @@
 package ru.job4j.lambda;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
+import java.util.ArrayList;
 
 public class AttachmentSort {
     public static void main(String[] args) {
-        List<Attachment> attachments = Arrays.asList(
+        List<Attachment> attachments = new ArrayList<>(List.of(
                 new Attachment("image 1", 100),
                 new Attachment("image 2", 34),
                 new Attachment("image 3", 13)
-        );
+        ));
         Comparator<Attachment> comparatorSize = new Comparator<>() {
             @Override
             public int compare(Attachment left, Attachment right) {
