@@ -13,11 +13,9 @@ public class ConvertListTest {
 
     @Test
     public void whenConvertTwoListInList() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[]{1, 2});
-        in.add(new int[]{3, 4, 5});
+        List<int[]> in = List.of(new int[]{1, 2}, new int[]{3, 4, 5});
         List<Integer> result = ConvertList.convert(in);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4, 5);
+        List<Integer> expected = List.of(1, 2, 3, 4, 5);
         assertThat(result, is(expected));
     }
 }
